--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -34,6 +34,10 @@
                     android:id="@+id/buttonCreate" android:layout_column="0"/>
             <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                     android:text="@string/reset" android:id="@+id/buttonReset" android:layout_column="0"/>
+            <WebView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/webView" android:visibility="gone"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
