--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,7 @@
         >
     <ViewAnimator
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/viewAnimator">
         <LinearLayout
                 android:orientation="vertical"
@@ -30,21 +30,34 @@
             <Spinner
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/scenarioSpinner" android:spinnerMode="dropdown"
+                    android:id="@+id/scenarioSpinner"
                     />
-            <Button
+            <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/create"
-                    android:id="@+id/buttonCreate" android:layout_column="0"/>
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:text="@string/reset" android:id="@+id/buttonReset" android:layout_column="0"/>
-            <Button
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Using apks"
+                        android:id="@+id/textView" android:gravity="center" android:paddingTop="10dip"
+                        android:paddingBottom="10dip"/>
+                <ListView
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/apkList"/>
+            </LinearLayout>
+            <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/open.config.file"
-                    android:id="@+id/buttonConfigFile" android:layout_gravity="center_horizontal"
-                    android:visibility="invisible"/>
+                    android:layout_height="wrap_content" android:orientation="horizontal">
+                <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/create"
+                        android:id="@+id/buttonCreate" android:layout_column="0"/>
+                <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
+                        android:text="@string/reset" android:id="@+id/buttonReset" android:layout_column="0"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
