--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,20 +13,6 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content">
-                <TextView android:layout_width="wrap_content" android:layout_height="fill_parent"
-                          android:text="@string/seed" android:id="@+id/textView1" android:layout_margin="5dip"
-                          android:layout_gravity="center" android:gravity="center_vertical"/>
-                <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:id="@+id/seed" android:numeric="integer" android:inputType="number|numberSigned"
-                        android:layout_gravity="center" android:layout_margin="5dip"/>
-            </LinearLayout>
             <Spinner
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -35,21 +21,26 @@
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="fill_parent" android:layout_weight="1">
                 <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="Using apks"
                         android:id="@+id/textView" android:gravity="center" android:paddingTop="10dip"
                         android:paddingBottom="10dip"/>
-                <ListView
-                        android:layout_width="fill_parent"
+                <ScrollView
+                        android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
-                        android:id="@+id/apkList"/>
+                        android:id="@+id/scrollView">
+                    <ListView
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:id="@+id/apkList"/>
+                </ScrollView>
             </LinearLayout>
             <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" android:orientation="horizontal">
+                    android:layout_height="wrap_content" android:orientation="horizontal" android:layout_weight="1">
                 <Button
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
