--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,8 +7,8 @@
         >
     <ViewAnimator
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/viewAnimator">
+            android:layout_height="fill_parent"
+            android:id="@+id/viewAnimator" android:layout_margin="5dip">
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
@@ -16,7 +16,7 @@
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent" android:layout_weight="1">
+                    android:layout_height="wrap_content" android:layout_weight="0">
                 <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                           android:text="Choose scenario file" android:id="@+id/textView2" android:gravity="center"
                           android:paddingTop="10dip" android:paddingBottom="10dip"/>
@@ -31,19 +31,19 @@
                         android:text="Using apks"
                         android:id="@+id/textView" android:gravity="center" android:paddingTop="10dip"
                         android:paddingBottom="10dip"/>
-                <ScrollView
-                        android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
-                        android:id="@+id/scrollView">
-                    <ListView
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                            android:id="@+id/apkList"/>
-                </ScrollView>
             </LinearLayout>
+            <ScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/scrollView" android:layout_weight="1" android:fillViewport="true">
+                <ListView
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/apkList"/>
+            </ScrollView>
             <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" android:orientation="horizontal">
+                    android:layout_height="wrap_content" android:orientation="horizontal" android:layout_weight="0">
                 <Button
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
